# github-copilot-upgrading

./: README_ko2.md
workshop/: README_ko.md
workshop/upgraded/: STRUCTURE.md  pyproject.toml  setup.py
workshop/upgraded/guachi/guachi.egg-info/: PKG-INFO  SOURCES.txt
