[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guachi"
version = "0.0.6"
description = "Global, persistent configurations as dictionaries"
authors = [
    { name = "Alfredo Deza", email = "alfredodeza@gmail.com" }
]
license = { text = "MIT" }
keywords = ["configuration", "management", "persistent", "dictionaries", "dictionary", "parse", "map", "mapping"]
readme = "README.rst"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["guachi"]
